syntax = "proto3";
import "public.proto";
package ProductPackage;

message Product {
    int32 id = 1;
    string title = 2;
    string price = 3;
}
message ProductID {
    int32 id = 1;
}
message ProductList {
    repeated Product products = 1;
}
message NewProduct {
    string title = 1;
    string price = 2;
}
service ProductService {
    rpc listProduct (PublicPackage.Empty) returns (ProductList);
    rpc getProduct (ProductID) returns (Product);
    rpc createProduct (NewProduct) returns (PublicPackage.Result);
    rpc updateProduct (Product) returns (PublicPackage.Result);
    rpc deleteProduct (ProductID) returns (PublicPackage.Result);
}